plugins {
    id 'java'
}

group 'com.atlchain'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
//    mavenCentral()
    maven { url 'http://download.osgeo.org/webdav/geotools/'}
    maven { url 'https://maven.aliyun.com/repository/central' }
    maven { url 'http://maven.yonyoucloud.com/nexus/content/repositories/releases/' }
}

dependencies {
    // JTS
    compile group: 'org.locationtech.jts', name: 'jts-core', version: '1.16.1'

    // Jersey
    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-http', version: '2.29'
    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.29'
    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.29.1'
    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-multipart', version: '2.28'
    compile group: 'org.glassfish.jersey.examples', name: 'multipart-webapp', version: '2.29'

    // HttpClient
    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.10'

    // Json
    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.61'

    // FastDFS
    compile group: 'org.csource', name: 'fastdfs-client-java', version: '1.27-RELEASE'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'

    // mongodb
    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.11.0'
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'

    // HDFS
    compile group: 'org.apache.hadoop', name: 'hadoop-client', version: '3.2.0'
    
    // HBase
    compile group: 'org.apache.hbase', name: 'hbase-client', version: '1.3.1'

    testCompile group: 'junit', name: 'junit', version: '4.12'

    // gt-geojson
    compile group: 'org.geotools', name: 'gt-geojson', version: '20.3'
}
